# compliance-atom

./: .env_example  .gitignore  .pre-commit-config.yaml  .pylintrc  FULL_LAUNCH.sh  LICENSE  Makefile  README.md  pyproject.toml
compliance/: applications.py  config.py  dtos.py  input_reader.py  main.py  metric_calculator.py  model_inference.py  output_creator.py  promt_templates.py  qwen_main.py
compliance/tools/logger/: __init__.py  _logger_adapter.py  _logger_filter_level_max.py  _logger_formatter.py  _logger_intercept_context.py  _logger_interceptor.py  _target_object.py  logger_depot.py  logger_depot_parameters.py  logger_intercept_parameters.py
compliance/tools/printer/: printer.py
devops/: docker-compose-superset.yml
notebooks/: qwen_init.ipynb  qwen_responce.ipynb
src/: applications.py  input_reader.py  main.py  metric_calculator.py  model_inference.py  output_creator.py  qwen_main.py
